--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
   "engines": {
     "node": "14.x"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.13",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^4.1.2"
+  },
   "description": ""
 }
