--- a/package.json
+++ b/package.json
@@ -20,16 +20,9 @@
     "socket.io": "^4.1.2"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.15.4",
+    "npm" : "6.14.10"
   },
-  "devDependencies": {
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "socket.io": "^4.1.2"
-  },
+  "devDependencies": {},
   "description": ""
 }
